--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">PokeRails</a>
+        <div class="navbar-brand"><%= link_to "PokeRails", "/"%></div>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Signup</a></li>
-          <li><a href="#">Pokedex</a></li>
+          <li><%= link_to "Login", :controller=>"devise/sessions", :action => :new %></li>
+          <li><%= link_to "Signup", :controller=>"devise/registrations", :action => :new %></li>
+          <li><%= link_to "Pokedex", :controller=>"/pokemons" %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account / USERNAME (if logged in)<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -41,8 +40,10 @@
   </nav>
 </head>
 <body>
-
-<%= yield %>
-
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
