Previous commits were not committing correctly. Resync to repository in an attempt to restore improperly comitted data.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="jumbotron">
+    <h1>Welcome to Pokemon on Rails.</h1>
+</div>
+
+<div>
+  <div class="col-md-8">
+    PokeRails is fantastic!
+  </div>
+
+  <div class="col-md-2">
+    This is the most ingenuious creation ever! Free too!
+  </div>
+
+  <div class="col-md-2">
+    PokeRails is, by the way, fantastic!
+  </div>
+</div>
