--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,9 +5,30 @@
   </div>
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { role: "form" }) do |f| %>
+
+        <!-- Custom non-devise forms added here -->
+
+        <!-- username -->
+        <div class="form-group">
+          <%= f.label :username %>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
+        </div>
+
+        <!-- avatar -->
+        <div class="form-group">
+          <%= f.radio_button_tag(:avatar, "trainer_male") %>
+          <%= f.label_tag(:age_child, "I am child2") %>
+          <%= f.radio_button_tag(:age, "adult") %>
+          <%= f.label_tag(:age_adult, "I'm over 21") %>
+
+
+          <%= f.label :avatar %>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
+        </div>
+        <!-- End Custom Fields -->
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+        <%= f.email_field :email, class: "form-control" %>
       </div>
       <div class="form-group">
         <%= f.label :password %><br />
