--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,17 +22,17 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <% if @current_user.nil? %>
+          <% if !user_signed_in? %>
           <li><%= link_to "Login", :controller=>"devise/sessions", :action => :new %></li>
           <li><%= link_to "Signup", :controller=>"devise/registrations", :action => :new %></li>
           <% else %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account / USERNAME (if logged in)<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
             <ul class="dropdown-menu">
              <li><a href="#">(if logged in) Profile</a></li>
               <li><a href="#">(if logged in) Settings</a></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Log Out", destroy_user_session_path %></li>
+              <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
           <% end %>
@@ -42,8 +42,8 @@
   </nav>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<p class="notice text-center"><%= notice %></p>
+<p class="alert text-center"><%= alert %></p>
 <div class="container">
   <%= yield %>
 </div>
