--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
             <ul class="dropdown-menu">
-             <li><a href="#">(if logged in) Profile</a></li>
-              <li><a href="#">(if logged in) Settings</a></li>
+             <li><%= link_to "Profile", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
             </ul>
