--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,34 @@
           <li><%= link_to "Login", :controller=>"devise/sessions", :action => :new %></li>
           <li><%= link_to "Signup", :controller=>"devise/registrations", :action => :new %></li>
           <% else %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-             <li><%= link_to "Profile", edit_user_registration_path %></li>
-              <li role="separator" class="divider"></li>
-              <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-            </ul>
-          </li>
+
+              <!-- Dropdown for "Explore" -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Pokemart", :controller=>"pages", :action => :pokemart %></li>
+                <li><%= link_to "Pokedex", :controller=>"pages", :action => :pokedex %></li>
+              </ul>
+            </li>
+
+              <!-- Dropdown for "Trainer HQ" -->
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainer HQ <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "My Bag", :controller=>"pages", :action => :bag %></li>
+                  <li><%= link_to "Pokemon Team", :controller=>"pages", :action => :pokemon_team %></li>
+                </ul>
+              </li>
+
+              <!-- Dropdown for user profile -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
+              <ul class="dropdown-menu">
+               <li><%= link_to "Profile", edit_user_registration_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+              </ul>
+            </li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
