--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,8 +23,8 @@
           <%= f.label_tag(:avatar_trainer_male, "Male Starter Trainer") %>
           </div>
           <div class="col-md-6 text-center">
-          <%= f.radio_button_tag(:avatar_trainer_male, "trainer_female") %>
-          <%= f.label_tag(:avatar_trainer_male, "Female Starter Trainer") %>
+          <%= f.radio_button_tag(:avatar, "trainer_female") %>
+          <%= f.label_tag(:avatar_trainer_female, "Female Starter Trainer") %>
           </div>
         </div>
           <!-- Starter -->
@@ -36,11 +36,11 @@
             </div>
             <div class="col-md-4">
               <%= f.radio_button_tag(:starter, "4") %>
-              <%= f.label_tag(:sarter_7, "Charmander") %>
+              <%= f.label_tag(:starter_7, "Charmander") %>
             </div>
             <div class="col-md-4">
               <%= f.radio_button_tag(:starter, "7") %>
-              <%= f.label_tag(:sarter_4, "Squirtle") %>
+              <%= f.label_tag(:starter_4, "Squirtle") %>
             </div>
 
             <div class="col-md-4">
@@ -49,11 +49,11 @@
             </div>
             <div class="col-md-4">
               <%= f.radio_button_tag(:starter, "133") %>
-              <%= f.label_tag(:sarter_133, "Eevee") %>
+              <%= f.label_tag(:starter_133, "Eevee") %>
             </div>
             <div class="col-md-4">
               <%= f.radio_button_tag(:starter, "447") %>
-              <%= f.label_tag(:sarter_447, "Riolu") %>
+              <%= f.label_tag(:starter_447, "Riolu") %>
             </div>
             </div>
         <!-- End Custom Fields -->
