--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if !user_signed_in? %>
-          <li><%= link_to "Login", :controller=>"devise/sessions", :action => :new %></li>
-          <li><%= link_to "Signup", :controller=>"devise/registrations", :action => :new %></li>
+          <li><%= link_to "Login", new_user_session_path %></li>
+          <li><%= link_to "Signup", new_user_registration_path %></li>
           <% else %>
 
               <!-- Dropdown for "Explore" -->
