--- a/app/views/pages/pokemart.html.erb
+++ b/app/views/pages/pokemart.html.erb
@@ -1,2 +1,96 @@
-<h1>Pages#pokemart</h1>
-<p>Find me in app/views/pages/pokemart.html.erb</p>
+<%- model_class_item = Item -%>
+
+<h1>Pokemart</h1>
+<hr>
+
+<!--
+<p>Your funds: #{current_user.money}</p>
+<hr>
+-->
+
+<!--
+    Make a form (text field) for the quantity of a given item wanted by the user
+    Have the number input validated first and then passed to be added to the user';s list of current items they have
+-->
+
+<h3>Medicine</h3>
+<hr>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><b>Name</b></th>
+      <th><b>Price</b></th>
+      <th><b>Category</b></th>
+      <th colspan="2"><b>Quantity</b></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @items.each do |item| %>
+      <% if item.item_type=="Medicine" %>
+        <tr>
+          <td><%= item.name %></td>
+          <td><%= item.price %></td>
+          <td><%= item.item_type %></td>
+          <td>input text field</td>
+          <td>Buy Button</td>
+        </tr>
+      <% end %>
+    <% end %>
+  </tbody>
+</table>
+
+
+
+<hr>
+<h3>Pokeballs</h3>
+<hr>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><b>Name</b></th>
+      <th><b>Price</b></th>
+      <th><b>Category</b></th>
+      <th colspan="2"><b>Quantity</b></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @items.each do |item| %>
+      <% if item.item_type=="Pokeballs" %>
+        <tr>
+          <td><%= item.name %></td>
+          <td><%= item.price %></td>
+          <td><%= item.item_type %></td>
+          <td>input text field</td>
+          <td>Buy Button</td>
+        </tr>
+      <% end %>
+    <% end %>
+  </tbody>
+</table>
+
+<hr>
+<h3>Evolution Stones</h3>
+<hr>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><b>Name</b></th>
+      <th><b>Price</b></th>
+      <th><b>Category</b></th>
+      <th colspan="2"><b>Quantity</b></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @items.each do |item| %>
+      <% if item.item_type=="Evolution_Stone" %>
+        <tr>
+          <td><%= item.name %></td>
+          <td><%= item.price %></td>
+          <td>Evolution Stone</td>
+          <td>input text field</td>
+          <td>Buy Button</td>
+        </tr>
+      <% end %>
+    <% end %>
+  </tbody>
+</table>
