--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -37,6 +37,26 @@ div {
   }
 }
 
+table, tr, td, thead, tbody {
+  padding: 10px;
+  margin: 10px 10px 10px 10px;
+  text-align: left;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  background-color: #4CAF50;
+  color: white;
+  padding: 5px;
+}
+
+tr:hover {background-color: #f5f5f5}
+
+
+
 #notice {
   color: green;
 }
