Fixed PokeRails logo to link to different things if logged in. Fixed CSS bug that created extra gaps for the devise divs - flash and notice.

--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,2 +1,27 @@
-<h1>I am trainer!</h1>
-This is a logged in section!
+<h1>Welcome to PokeRails, <%= "#{current_user.username}" %>!</h1>
+<p>You may use the navigation above to naviate the site or select a map image below to quickly begin exploring the region!</p>
+
+<div class="container">
+<div>
+	<div class="col-md-4">
+		<pre>Map # 1 Goes Here </pre>
+	</div>
+	<div class="col-md-4">
+		<pre>Map # 2 Goes Here </pre>
+	</div>
+	<div class="col-md-4">
+		<pre>Map # 3 Goes Here </pre>
+	</div>
+</div>
+<div>
+	<div class="col-md-4">
+		<pre>Map # 1 Goes Here </pre>
+	</div>
+	<div class="col-md-4">
+		<pre>Map # 2 Goes Here </pre>
+	</div>
+	<div class="col-md-4">
+		<pre>Map # 3 Goes Here </pre>
+	</div>
+</div>
+</div>
