--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -16,7 +15,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class="navbar-brand"><%= link_to "PokeRails", "/"%></div>
+        <div class="navbar-brand">
+          <% if user_signed_in? %>
+            <%= link_to "PokeRails", trainers_index_url %>
+          <% else %>
+            <%= link_to "PokeRails", root_path %>
+          <% end %>
+
+        </div>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,8 +67,8 @@
   </nav>
 </head>
 <body>
-<p class="notice text-center"><%= notice %></p>
-<p class="alert text-center"><%= alert %></p>
+<div class="notice text-center", style="div:empty { display: none }"><%= notice %></div>
+<div class="alert text-center", style="div:empty { display: none }"><%= alert %></div>
 <div class="container">
   <%= yield %>
 </div>
