Added Page titles. Updated layout application file. Added inventory. Modified routes to include inventory.

--- a/app/views/pages/pokedex.html.erb
+++ b/app/views/pages/pokedex.html.erb
@@ -1,3 +1,5 @@
+<h1><%= content_for(:title, "PokeRails | Pokedex") %></h1>
+
 <%- model_class_pokemon = Pokemon -%>
 <head><title>Pokedex</title></head>
 <h1>Pokedex</h1>
