--- a/app/views/pages/pokemart.html.erb
+++ b/app/views/pages/pokemart.html.erb
@@ -1,3 +1,5 @@
+<h1><%= content_for(:title, "PokeRails | Pokemart") %></h1>
+
 <%- model_class_item = Item -%>
 <head><title>Pokemart</title></head>
 <h1>Pokemart</h1>
