--- a/app/views/pages/pokemon_team.html.erb
+++ b/app/views/pages/pokemon_team.html.erb
@@ -1,2 +1,4 @@
+<h1><%= content_for(:title, "PokeRails | Team") %></h1>
+
 <h1>Pages#pokemon_team</h1>
 <p>Find me in app/views/pages/pokemon_team.html.erb</p>
