--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,8 +7,6 @@
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { role: "form" }) do |f| %>
 
-        <!-- Custom non-devise forms added here -->
-
         <!-- username -->
         <div class="form-group">
           <%= f.label :username %>
@@ -18,7 +16,16 @@
         <!-- money, defaults to 3000 through a hidden field -->
         <div class="form-group">
           <%= f.hidden_field :money, :value => 3000 %>
+        </div>1
+
+        <div class="form-group">
+          <%= f.text_field :avatar, :value => "trainer_male" %>
         </div>
+
+        <div class="form-group">
+          <%= f.text_field :starter, :value => "1" %>
+        </div>
+
 
       <div class="form-group">
         <%= f.label :email %>
