--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainer HQ <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "My Bag", :controller=>"pages", :action => :bag %></li>
+                  <li><%= link_to "Inventory", :controller=>"pages", :action => :inventory %></li>
                   <li><%= link_to "Pokemon Team", :controller=>"pages", :action => :pokemon_team %></li>
                   <li><%= link_to "Pokedex", :controller=>"pages", :action => :pokedex %></li>
                 </ul>
