--- a/app/views/pages/pokemon.html.erb
+++ b/app/views/pages/pokemon.html.erb
@@ -1,3 +1,5 @@
+<h1><%= content_for(:title, "PokeRails | Pokemon") %></h1>
+
 <%- model_class = Pokemon -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
