--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,2 +1,4 @@
+<h1><%= content_for(:title, "PokeRails | Profile") %></h1>
+
 <h1>Pages#profile</h1>
 <p>Find me in app/views/pages/profile.html.erb</p>
