--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,6 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainer HQ <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "My Bag", :controller=>"pages", :action => :bag %></li>
                   <li><%= link_to "Inventory", :controller=>"pages", :action => :inventory %></li>
                   <li><%= link_to "Pokemon Team", :controller=>"pages", :action => :pokemon_team %></li>
                   <li><%= link_to "Pokedex", :controller=>"pages", :action => :pokedex %></li>
@@ -68,8 +67,8 @@
   </nav>
 </head>
 <body>
-<div class="notice text-center", style="div:empty { display: none }"><%= notice %></div>
-<div class="alert text-center", style="div:empty { display: none }"><%= alert %></div>
+<div class="notice text-center"><%= notice %></div>
+<div class="alert text-center"><%= alert %></div>
 <div class="container">
   <%= yield %>
 </div>
