--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,16 +16,24 @@
         <!-- money, defaults to 3000 through a hidden field -->
         <div class="form-group">
           <%= f.hidden_field :money, :value => 3000 %>
-        </div>1
-
-        <div class="form-group">
-         Male <%= f.radio_button :avatar, "trainer_male" %>
-         Female <%= f.radio_button :avatar, "trainer_female" %>
         </div>
 
         <div class="form-group">
+
+        <%= f.label :avatar %> <br />
+          <div class="text-center">
+         Male <%= f.radio_button :avatar, "trainer_male" %>
+         Female <%= f.radio_button :avatar, "trainer_female" %>
+       </div>
+        </div>
+
+        <div class="form-group">
+        <%= f.label :starter %> <br />
+          
+          <div class="text-center">
          Pikachu <%= f.radio_button :starter, 25 %>
          Eevee <%= f.radio_button :starter, 133 %>
+       </div>
         </div>
 
       <div class="form-group">
