Fully finished pokedex page. Edited some pages to keep consistent layouts

--- a/app/views/pages/inventory.html.erb
+++ b/app/views/pages/inventory.html.erb
@@ -6,10 +6,10 @@
 <table>
   <thead>
     <tr>
-      <th><b>Name</b></th>
-      <th><b>Price</b></th>
-      <th><b>Category</b></th>
-      <th colspan="2"><b>Quantity</b></th>
+      <th class="col-md-2"><b>Name</b></th>
+      <th class="col-md-2"><b>Price</b></th>
+      <th class="col-md-2"><b>Category</b></th>
+      <th class="col-md-2"><b>Quantity</b></th>
     </tr>
   </thead>
 </table>
@@ -20,10 +20,10 @@
 <table>
   <thead>
     <tr>
-      <th><b>Name</b></th>
-      <th><b>Price</b></th>
-      <th><b>Category</b></th>
-      <th colspan="2"><b>Quantity</b></th>
+      <th class="col-md-2"><b>Name</b></th>
+      <th class="col-md-2"><b>Price</b></th>
+      <th class="col-md-2"><b>Category</b></th>
+      <th class="col-md-2"><b>Quantity</b></th>
     </tr>
   </thead>
   <tbody>
@@ -37,10 +37,10 @@
 <table>
   <thead>
     <tr>
-      <th><b>Name</b></th>
-      <th><b>Price</b></th>
-      <th><b>Category</b></th>
-      <th colspan="2"><b>Quantity</b></th>
+      <th class="col-md-2"><b>Name</b></th>
+      <th class="col-md-2"><b>Price</b></th>
+      <th class="col-md-2"><b>Category</b></th>
+      <th class="col-md-2"><b>Quantity</b></th>
     </tr>
   </thead>
   <tbody>
