--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Pokemart", :controller=>"pages", :action => :pokemart %></li>
+                <li><%= link_to "Pokemart", :controller=>"pages", :action => :pokemart, only_path: true%></li>
               </ul>
             </li>
 
@@ -55,7 +55,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
               <ul class="dropdown-menu">
-               <li><%= link_to "Profile", :controller=>"trainers", :action => :edit %></li>
+               <li><%= link_to "Profile", :controller=>'trainers', :action=>'edit' %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
               </ul>
