Finally got the profile viewing/editing page to work. Also did some small layout things.

--- a/app/views/trainers/edit.html.erb
+++ b/app/views/trainers/edit.html.erb
@@ -5,8 +5,10 @@
 
 <p>User: <%= @user.username %></p>
 <p>Email: <%= @user.email %></p>
-
 <p>Money: <%= @user.money %></p>
+
+<%= link_to "Change your password", edit_user_registration_path %>
+
 
 <footer>
   <hr>
