--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -57,9 +57,8 @@ tr:hover {background-color: #f5f5f5}
 
 footer{
   position: absolute;
-  bottom: 0;
+  bottom: 15%;
 }
-
 
 #notice {
   color: green;
