--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Pokemart", :controller=>"pages", :action => :pokemart, only_path: true%></li>
+                <li><%= link_to "Pokemart", pages_pokemart_path %></li>
               </ul>
             </li>
 
@@ -45,9 +45,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainer HQ <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Inventory", :controller=>"pages", :action => :inventory %></li>
-                  <li><%= link_to "Pokemon Team", :controller=>"pages", :action => :pokemon_team %></li>
-                  <li><%= link_to "Pokedex", :controller=>"pages", :action => :pokedex %></li>
+                  <li><%= link_to "Inventory", pages_inventory_path %></li>
+                  <li><%= link_to "Pokemon Team", pages_pokemon_team_path %></li>
+                  <li><%= link_to "Pokedex", pages_pokedex_path %></li>
                 </ul>
               </li>
 
@@ -55,7 +55,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
               <ul class="dropdown-menu">
-               <li><%= link_to "Profile", :controller=>'trainers', :action=>'edit' %></li>
+               <li><%= link_to "Profile", trainers_edit_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
               </ul>
