--- a/app/views/pages/pokemart.html.erb
+++ b/app/views/pages/pokemart.html.erb
@@ -23,7 +23,7 @@
     <% @items.each do |item| %>
       <% if item.item_type=="Medicine" %>
         <tr>
-          <td class="col-md-2"><%= item.name %></td>
+          <td class="col-md-2"><%= image_tag("item/#{item.id}.png")%><%= item.name %></td>
           <td class="col-md-2"><%= item.price %></td>
           <td class="col-md-2"><%= item.item_type %></td>
           <td class="col-md-2"><%= text_field_tag(item.name, "0") %></td>
@@ -50,7 +50,7 @@
     <% @items.each do |item| %>
       <% if item.item_type=="Pokeballs" %>
         <tr>
-          <td class="col-md-2"><%= item.name %></td>
+          <td class="col-md-2"><%= image_tag("item/#{item.id}.png")%><%= item.name %></td>
           <td class="col-md-2"><%= item.price %></td>
           <td class="col-md-2"><%= item.item_type %></td>
           <td class="col-md-2"><%= text_field_tag(item.name, "0") %></td>
@@ -77,7 +77,7 @@
     <% @items.each do |item| %>
       <% if item.item_type=="Evolution_Stone" %>
         <tr>
-          <td class="col-md-2"><%= item.name %></td>
+          <td class="col-md-2"><%= image_tag("item/#{item.id}.png")%><%= item.name %></td>
           <td class="col-md-2"><%= item.price %></td>
           <td class="col-md-2">Evolution Stone</td>
           <td class="col-md-2"><%= text_field_tag(item.name, "0") %></td>
