--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,8 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainer HQ <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Inventory", pages_inventory_path %></li>
-                  <li><%= link_to "Pokemon Team", pages_pokemon_team_path %></li>
+                  <li><%= link_to "My Inventory", pages_inventory_path %></li>
+                  <li><%= link_to "My Pokemon", pages_pokemon_team_path %></li>
                   <li><%= link_to "Pokedex", pages_pokedex_path %></li>
                 </ul>
               </li>
@@ -55,7 +55,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "#{current_user.username}" %><span class="caret"></span></a>
               <ul class="dropdown-menu">
-               <li><%= link_to "Profile", trainers_edit_path %></li>
+               <li><%= link_to "My Profile", trainers_edit_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
               </ul>
